Changes in 4.1.3

1)  Fix NFLOG/ULOG upcasing problem.

2)  Fix STARTUP_LOG without LOG_VERBOSITY.

3)  Fix LOG_VERBOSITY without STARTUP_LOG.

4)  Fall back to /bin/sh if SHOREWALL_SHELL isn't viable.

5)  Fix mis-handling of <interface>:<mac>

6)  Add better diagnostic when not running as root.

7)  Detect lack of interfaces and IPv4 zones.

Changes in 4.1.2

1)  Enhanced Operational Logging

2)  Fix undefined value when config file missing.

3)  Handle exit status 4 from iptables.

4)  Fix formatting of macro headings (again).

5)  Update sample shorewall.conf files with new options.

6)  Correct Jabber macro names.

7)  Tighten up HIGH_ROUTE_MARKS in the OUTPUT chain.

8)  Add 'nomarks' OPTION to tcdevices.

9)  Add COMMENTs to macros.

Changes in 4.1.1

1)  Fix ULOG/NFLOG output.

2)  Fix NFQUEUE(<queue-num>) in Policy file.

3)  Allow specifying an address in the Providers file.

Changes in 4.1.0.

1)  Add 'shared' provider option.

2)  Allow refresh of entire table and refresh mangle by default.

3)  Add NFLOG support.

4)  Implement alternative syntax for params.

5)  Add support for embedded shell and Perl scripts.

6)  Add support for manual chains.

7)  Don't require GATEWAY in tunnels file.

8)  Fix HIGH_ROUTE_MARKS fsck-up.

9)  Fix Makefiles for VARDIR

10) Add -t option to hits command.

11) Add DONT_LOAD option

12) Add support for --random.