@@ -14,6 +14,8 @@ Changes in 4.1.3
 
 7)  Detect lack of interfaces and IPv4 zones.
 
+8)  Classify marked traffic using tc filter rules.
+
 Changes in 4.1.2
 
 1)  Enhanced Operational Logging
